# MLX_W4_DD_Transfer_Learning

./: .gitignore  README.md  im_transfer.sh  pyproject.toml  run_on_gpu.sh  setup.sh
ethan/: 001_unpacking_CLIP_and_other_models.ipynb  002_checking_pickle_datasets.ipynb  dataset.py  ethan_decoder_model.py  ethan_flickr_dataset_processing.py  token_utils.py  train_ethan_decoder.py  train_ethan_decoder_vibe.py
model/: dataset.py  inference.py  model.py  run_training.py  start_train.py  train.py
model2/: __init__.py  model.py  train.py  trainv3.py
qwen_large/: Copy of Qwen2.5-VL-3B-Instruct.ipynb  run_qwen.ipynb  upload_to_hf.ipynb
