[project]
name = "mlx-w4-dd-transfer-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]
